--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
     	"php": ">=5.3.0",
-    	"mouf/utils.value.value-interface": "~1.0"
+    	"mouf/utils.value.value-interface": "~1.0",
+    	"mouf/utils.common.conditioninterface": "~2.0"
     },
     "autoload": {
         "psr-0": {
