Making the namespace more specific in psr0 autoloader of Composer. This will help improve performance by reducing the number of useless calls to file_exists.

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     },
     "autoload": {
         "psr-0": {
-            "Mouf": "src/"
+            "Mouf\\Utils\\Action": "src/",
+            "Mouf\\Utils\\Common": "src/",
+            "Mouf\\Utils\\Value": "src/"
         }
     },
     "extra": {
